# nd_array

./: .clang-tidy  .cmake-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TESTING.md  main.cpp  mkdocs.yml  nd_array.hpp  nd_span_guide.md  pyproject.toml
.github/actions/setup_cache/: action.yml
.github/workflows/: ci.yml  docs.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json  nd_array_tests  nd_array_tests-b12d07c_include.cmake  nd_array_tests-b12d07c_tests.cmake
_codeql_build_dir/examples/: Makefile  cmake_install.cmake  nd_array_demo
cmake/: CPM.cmake
docs/: changelog.md  examples.md  index.md  nd-array-guide.md  nd-span-guide.md  testing.md
examples/: CMakeLists.txt  README.md  demo.cpp
include/nd_array/: nd_array.hpp
tests/: test_nd_array.cpp  test_nd_span.cpp
